specs/compile-errors/round1.txt
$ BUN_DEBUG_QUIET_LOGS=1 bun scripts/build.ts --profile=debug --quiet -p "JSON.stringify([typeof new ReadableStream({}), typeof new WritableStream({}), typeof new TransformStream(), typeof new ReadableStream().getReader(), typeof new Response(\"x\").body, typeof new Blob([\"y\"]).stream()])"
info: syncing channel updates for nightly-2026-05-06-x86_64-unknown-linux-gnu
info: latest update on 2026-05-06 for version 1.97.0-nightly (e95e73209 2026-05-05)
info: component rust-src is up to date
info: checking for self-update (current version: 1.29.0)
ninja: Entering directory `/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug'
[1/130] gen cpp.rs (cppbind)
[2/130] gen JS modules (bundle-modules)
[2/130] cargo bun_bin → libbun_rust.a (--target x86_64-unknown-linux-gnu)

  nightly-2026-05-06-x86_64-unknown-linux-gnu unchanged - rustc 1.97.0-nightly (e95e73209 2026-05-05)

[27/130] cxx obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp.o
FAILED: obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp.o 
/usr/bin/ccache /usr/local/bin/clang++ -march=haswell -O0 -g3 -gz=zstd -glldb -fsanitize=address -fno-exceptions -fno-c++-static-destructors -fno-rtti -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -fvisibility=hidden -fvisibility-inlines-hidden -fno-unwind-tables -fno-asynchronous-unwind-tables -Wno-c23-extensions -ffunction-sections -fdata-sections -faddrsig -fno-semantic-interposition -fno-delete-null-pointer-checks -fdiagnostics-color=always -ferror-limit=100 -std=gnu++23 -fsanitize=null -fno-sanitize-recover=all -fsanitize=bounds -fsanitize=return -fsanitize=nullability-arg -fsanitize=nullability-assign -fsanitize=nullability-return -fsanitize=returns-nonnull-attribute -fsanitize=unreachable -fconstexpr-steps=6000000 -fconstexpr-depth=54 -fno-pic -fno-pie -Werror=return-type -Werror=return-stack-address -Werror=implicit-function-declaration -Werror=uninitialized -Werror=conditional-uninitialized -Werror=suspicious-memaccess -Werror=int-conversion -Werror=nonnull -Werror=move -Werror=sometimes-uninitialized -Wno-c++23-lambda-attributes -Wno-nullability-completeness -Wno-character-conversion -Werror -Werror=unused -Wno-unused-function -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages/bun-usockets -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages/bun-usockets/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/webcore -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/webcrypto -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/node/crypto -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/node/http -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/sqlite -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/v8 -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/modules -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/js/builtins -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/runtime/napi -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/uws_sys -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/codegen -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/picohttpparser -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/zlib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/libuv -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/picohttpparser -I/root/.bun/build-cache/nodejs-headers-26.3.0/include -I/root/.bun/build-cache/nodejs-headers-26.3.0/include/node -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/zlib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/zstd/lib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/brotli/c/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libdeflate -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libarchive/libarchive -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libjpeg-turbo/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/libjpeg-turbo -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libspng/spng -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libwebp/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/cares/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/cares -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/hdrhistogram/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/highway -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/highway/hwy -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lshpack -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lsqpack -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/mimalloc/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/sqlite -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/boringssl/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lsquic/include -I/root/.bun/build-cache/webkit-c9ad5813fd23bd8b-debug-asan/include -I/root/.bun/build-cache/webkit-c9ad5813fd23bd8b-debug-asan/include/wtf/unicode -D_HAS_EXCEPTIONS=0 -DLIBUS_USE_OPENSSL=1 -DLIBUS_USE_BORINGSSL=1 -DWITH_BORINGSSL=1 -DSTATICALLY_LINKED_WITH_JavaScriptCore=1 -DSTATICALLY_LINKED_WITH_BMALLOC=1 -DBUILDING_WITH_CMAKE=1 -DJSC_OBJC_API_ENABLED=0 -DBUN_SINGLE_THREADED_PER_VM_ENTRY_SCOPE=1 -DNAPI_EXPERIMENTAL=ON -DNOMINMAX -DIS_BUILD -DBUILDING_JSCONLY__ -DREPORTED_NODEJS_VERSION=\"26.3.0\" -DREPORTED_NODEJS_ABI_VERSION=147 -DREPORTED_NODEJS_V8_VERSION=\"14.6.202.34-node.20\" -DUSE_BUN_MIMALLOC=1 -DASSERT_ENABLED=1 -DBUN_DEBUG=1 -DLIBUS_SOCKET_FAULT_INJECTION=1 -DBUN_DYNAMIC_JS_LOAD_PATH=\"/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/js\" -DLAZY_LOAD_SQLITE=0 -Winvalid-pch -Xclang -include-pch -Xclang pch/root-pch.h.hxx.pch -Xclang -include -Xclang pch/root-pch.h.hxx -MMD -MT obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp.o -MF obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp.o.d -c unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp -o obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp.o
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp:2:
unified/../../../src/jsc/bindings/webcore/streams/BunStreamSource.cpp:277:16: error: redefinition of 'invokeMethod'
  277 | static JSValue invokeMethod(JSGlobalObject* globalObject, JSObject* object, const Identifier& name, const MarkedArgumentBuffer& args)
      |                ^
unified/../../../src/jsc/bindings/webcore/streams/BunStreamConsumers.cpp:170:16: note: previous definition is here
  170 | static JSValue invokeMethod(JSGlobalObject* globalObject, JSObject* object, const Identifier& name, const MarkedArgumentBuffer& args)
      |                ^
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-0.cpp:5:
unified/../../../src/jsc/bindings/webcore/streams/JSCountQueuingStrategy.cpp:126:15: error: redefinition of 'convertQueuingStrategyInit'
  126 | static double convertQueuingStrategyInit(JSGlobalObject* globalObject, JSValue init)
      |               ^
unified/../../../src/jsc/bindings/webcore/streams/JSByteLengthQueuingStrategy.cpp:126:15: note: previous definition is here
  126 | static double convertQueuingStrategyInit(JSGlobalObject* globalObject, JSValue init)
      |               ^
2 errors generated.
[38/130] cxx obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp.o
FAILED: obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp.o 
/usr/bin/ccache /usr/local/bin/clang++ -march=haswell -O0 -g3 -gz=zstd -glldb -fsanitize=address -fno-exceptions -fno-c++-static-destructors -fno-rtti -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -fvisibility=hidden -fvisibility-inlines-hidden -fno-unwind-tables -fno-asynchronous-unwind-tables -Wno-c23-extensions -ffunction-sections -fdata-sections -faddrsig -fno-semantic-interposition -fno-delete-null-pointer-checks -fdiagnostics-color=always -ferror-limit=100 -std=gnu++23 -fsanitize=null -fno-sanitize-recover=all -fsanitize=bounds -fsanitize=return -fsanitize=nullability-arg -fsanitize=nullability-assign -fsanitize=nullability-return -fsanitize=returns-nonnull-attribute -fsanitize=unreachable -fconstexpr-steps=6000000 -fconstexpr-depth=54 -fno-pic -fno-pie -Werror=return-type -Werror=return-stack-address -Werror=implicit-function-declaration -Werror=uninitialized -Werror=conditional-uninitialized -Werror=suspicious-memaccess -Werror=int-conversion -Werror=nonnull -Werror=move -Werror=sometimes-uninitialized -Wno-c++23-lambda-attributes -Wno-nullability-completeness -Wno-character-conversion -Werror -Werror=unused -Wno-unused-function -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages/bun-usockets -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages/bun-usockets/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/webcore -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/webcrypto -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/node/crypto -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/node/http -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/sqlite -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/v8 -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/modules -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/js/builtins -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/runtime/napi -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/uws_sys -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/codegen -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/picohttpparser -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/zlib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/libuv -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/picohttpparser -I/root/.bun/build-cache/nodejs-headers-26.3.0/include -I/root/.bun/build-cache/nodejs-headers-26.3.0/include/node -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/zlib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/zstd/lib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/brotli/c/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libdeflate -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libarchive/libarchive -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libjpeg-turbo/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/libjpeg-turbo -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libspng/spng -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libwebp/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/cares/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/cares -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/hdrhistogram/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/highway -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/highway/hwy -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lshpack -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lsqpack -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/mimalloc/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/sqlite -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/boringssl/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lsquic/include -I/root/.bun/build-cache/webkit-c9ad5813fd23bd8b-debug-asan/include -I/root/.bun/build-cache/webkit-c9ad5813fd23bd8b-debug-asan/include/wtf/unicode -D_HAS_EXCEPTIONS=0 -DLIBUS_USE_OPENSSL=1 -DLIBUS_USE_BORINGSSL=1 -DWITH_BORINGSSL=1 -DSTATICALLY_LINKED_WITH_JavaScriptCore=1 -DSTATICALLY_LINKED_WITH_BMALLOC=1 -DBUILDING_WITH_CMAKE=1 -DJSC_OBJC_API_ENABLED=0 -DBUN_SINGLE_THREADED_PER_VM_ENTRY_SCOPE=1 -DNAPI_EXPERIMENTAL=ON -DNOMINMAX -DIS_BUILD -DBUILDING_JSCONLY__ -DREPORTED_NODEJS_VERSION=\"26.3.0\" -DREPORTED_NODEJS_ABI_VERSION=147 -DREPORTED_NODEJS_V8_VERSION=\"14.6.202.34-node.20\" -DUSE_BUN_MIMALLOC=1 -DASSERT_ENABLED=1 -DBUN_DEBUG=1 -DLIBUS_SOCKET_FAULT_INJECTION=1 -DBUN_DYNAMIC_JS_LOAD_PATH=\"/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/js\" -DLAZY_LOAD_SQLITE=0 -Winvalid-pch -Xclang -include-pch -Xclang pch/root-pch.h.hxx.pch -Xclang -include -Xclang pch/root-pch.h.hxx -MMD -MT obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp.o -MF obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp.o.d -c unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp -o obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp.o
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp:3:
unified/../../../src/jsc/bindings/webcore/streams/JSWritableStreamDefaultController.cpp:32:24: error: redefinition of 'invokePromiseReturningMethod'
   32 | static JSC::JSPromise* invokePromiseReturningMethod(JSC::JSGlobalObject* globalObject, JSC::JSObject* method, JSC::JSValue thisValue, const JSC::MarkedArgumentBuffer& args)
      |                        ^
unified/../../../src/jsc/bindings/webcore/streams/JSTransformStreamDefaultController.cpp:40:19: note: previous definition is here
   40 | static JSPromise* invokePromiseReturningMethod(JSGlobalObject* globalObject, JSObject* method, JSValue thisValue, const MarkedArgumentBuffer& args)
      |                   ^
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-3.cpp:6:
unified/../../../src/jsc/bindings/webcore/streams/TransformStreamOperations.cpp:31:43: error: redefinition of 'transformReadableController'
   31 | static JSReadableStreamDefaultController* transformReadableController(JSTransformStream* stream)
      |                                           ^
unified/../../../src/jsc/bindings/webcore/streams/JSTransformStreamDefaultController.cpp:31:43: note: previous definition is here
   31 | static JSReadableStreamDefaultController* transformReadableController(JSTransformStream* stream)
      |                                           ^
2 errors generated.
[56/130] cxx obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp.o
FAILED: obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp.o 
/usr/bin/ccache /usr/local/bin/clang++ -march=haswell -O0 -g3 -gz=zstd -glldb -fsanitize=address -fno-exceptions -fno-c++-static-destructors -fno-rtti -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -fvisibility=hidden -fvisibility-inlines-hidden -fno-unwind-tables -fno-asynchronous-unwind-tables -Wno-c23-extensions -ffunction-sections -fdata-sections -faddrsig -fno-semantic-interposition -fno-delete-null-pointer-checks -fdiagnostics-color=always -ferror-limit=100 -std=gnu++23 -fsanitize=null -fno-sanitize-recover=all -fsanitize=bounds -fsanitize=return -fsanitize=nullability-arg -fsanitize=nullability-assign -fsanitize=nullability-return -fsanitize=returns-nonnull-attribute -fsanitize=unreachable -fconstexpr-steps=6000000 -fconstexpr-depth=54 -fno-pic -fno-pie -Werror=return-type -Werror=return-stack-address -Werror=implicit-function-declaration -Werror=uninitialized -Werror=conditional-uninitialized -Werror=suspicious-memaccess -Werror=int-conversion -Werror=nonnull -Werror=move -Werror=sometimes-uninitialized -Wno-c++23-lambda-attributes -Wno-nullability-completeness -Wno-character-conversion -Werror -Werror=unused -Wno-unused-function -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages/bun-usockets -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/packages/bun-usockets/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/webcore -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/webcrypto -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/node/crypto -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/node/http -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/sqlite -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/v8 -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/modules -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/js/builtins -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/runtime/napi -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/uws_sys -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/codegen -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/picohttpparser -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/zlib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/libuv -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/picohttpparser -I/root/.bun/build-cache/nodejs-headers-26.3.0/include -I/root/.bun/build-cache/nodejs-headers-26.3.0/include/node -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/zlib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/zstd/lib -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/brotli/c/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libdeflate -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libarchive/libarchive -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libjpeg-turbo/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/libjpeg-turbo -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libspng/spng -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/libwebp/src -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/cares/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/deps/cares -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/hdrhistogram/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/highway -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/highway/hwy -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lshpack -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lsqpack -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/mimalloc/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc/bindings/sqlite -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/boringssl/include -I/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/vendor/lsquic/include -I/root/.bun/build-cache/webkit-c9ad5813fd23bd8b-debug-asan/include -I/root/.bun/build-cache/webkit-c9ad5813fd23bd8b-debug-asan/include/wtf/unicode -D_HAS_EXCEPTIONS=0 -DLIBUS_USE_OPENSSL=1 -DLIBUS_USE_BORINGSSL=1 -DWITH_BORINGSSL=1 -DSTATICALLY_LINKED_WITH_JavaScriptCore=1 -DSTATICALLY_LINKED_WITH_BMALLOC=1 -DBUILDING_WITH_CMAKE=1 -DJSC_OBJC_API_ENABLED=0 -DBUN_SINGLE_THREADED_PER_VM_ENTRY_SCOPE=1 -DNAPI_EXPERIMENTAL=ON -DNOMINMAX -DIS_BUILD -DBUILDING_JSCONLY__ -DREPORTED_NODEJS_VERSION=\"26.3.0\" -DREPORTED_NODEJS_ABI_VERSION=147 -DREPORTED_NODEJS_V8_VERSION=\"14.6.202.34-node.20\" -DUSE_BUN_MIMALLOC=1 -DASSERT_ENABLED=1 -DBUN_DEBUG=1 -DLIBUS_SOCKET_FAULT_INJECTION=1 -DBUN_DYNAMIC_JS_LOAD_PATH=\"/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/build/debug/js\" -DLAZY_LOAD_SQLITE=0 -Winvalid-pch -Xclang -include-pch -Xclang pch/root-pch.h.hxx.pch -Xclang -include -Xclang pch/root-pch.h.hxx -MMD -MT obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp.o -MF obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp.o.d -c unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp -o obj/unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp.o
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp:5:
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamBYOBReader.cpp:92:82: error: call to 'byteControllerOf' is ambiguous
   92 |     RELEASE_AND_RETURN(scope, readableByteStreamControllerPullInto(globalObject, byteControllerOf(stream), view, min, readIntoRequest));
      |                                                                                  ^~~~~~~~~~~~~~~~
unified/../../../src/jsc/bindings/webcore/streams/JSReadRequest.cpp:38:40: note: candidate function
   38 | static JSReadableByteStreamController* byteControllerOf(JSReadableStream* stream)
      |                                        ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamBYOBReader.cpp:41:49: note: candidate function
   41 | static WebCore::JSReadableByteStreamController* byteControllerOf(JSReadableStream* stream)
      |                                                 ^
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp:7:
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultController.cpp:33:24: error: redefinition of 'invokePromiseReturningMethod'
   33 | static JSC::JSPromise* invokePromiseReturningMethod(JSC::JSGlobalObject* globalObject, JSC::JSObject* method, JSC::JSValue thisValue, const JSC::MarkedArgumentBuffer& args)
      |                        ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableByteStreamController.cpp:109:24: note: previous definition is here
  109 | static JSC::JSPromise* invokePromiseReturningMethod(JSC::JSGlobalObject* globalObject, JSC::JSObject* method, JSC::JSValue thisValue, const JSC::MarkedArgumentBuffer& args)
      |                        ^
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp:8:
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:47:49: error: redefinition of 'byteControllerOf'
   47 | static WebCore::JSReadableByteStreamController* byteControllerOf(JSReadableStream* stream)
      |                                                 ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamBYOBReader.cpp:41:49: note: previous definition is here
   41 | static WebCore::JSReadableByteStreamController* byteControllerOf(JSReadableStream* stream)
      |                                                 ^
In file included from unified/UnifiedSource-src_jsc_bindings_webcore_streams-1.cpp:8:
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:103:35: error: call to 'defaultControllerOf' is ambiguous
  103 |         RELEASE_AND_RETURN(scope, defaultControllerOf(stream)->pullSteps(globalObject, readRequest));
      |                                   ^~~~~~~~~~~~~~~~~~~
unified/../../../src/jsc/bindings/webcore/streams/JSReadRequest.cpp:32:43: note: candidate function
   32 | static JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                           ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:41:52: note: candidate function
   41 | static WebCore::JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                                    ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:180:50: error: call to 'defaultControllerOf' is ambiguous
  180 |     auto* defaultController = isByte ? nullptr : defaultControllerOf(stream);
      |                                                  ^~~~~~~~~~~~~~~~~~~
unified/../../../src/jsc/bindings/webcore/streams/JSReadRequest.cpp:32:43: note: candidate function
   32 | static JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                           ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:41:52: note: candidate function
   41 | static WebCore::JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                                    ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:349:84: error: call to 'defaultControllerOf' is ambiguous
  349 |         bool queueIsEmpty = isByte ? byteControllerOf(stream)->m_queue.isEmpty() : defaultControllerOf(stream)->m_queue.isEmpty();
      |                                                                                    ^~~~~~~~~~~~~~~~~~~
unified/../../../src/jsc/bindings/webcore/streams/JSReadRequest.cpp:32:43: note: candidate function
   32 | static JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                           ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:41:52: note: candidate function
   41 | static WebCore::JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                                    ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:358:13: error: call to 'byteControllerOf' is ambiguous
  358 |             byteControllerOf(stream)->pullSteps(globalObject, readRequest);
      |             ^~~~~~~~~~~~~~~~
unified/../../../src/jsc/bindings/webcore/streams/JSReadRequest.cpp:38:40: note: candidate function
   38 | static JSReadableByteStreamController* byteControllerOf(JSReadableStream* stream)
      |                                        ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:47:49: note: candidate function
   47 | static WebCore::JSReadableByteStreamController* byteControllerOf(JSReadableStream* stream)
      |                                                 ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:360:13: error: call to 'defaultControllerOf' is ambiguous
  360 |             defaultControllerOf(stream)->pullSteps(globalObject, readRequest);
      |             ^~~~~~~~~~~~~~~~~~~
unified/../../../src/jsc/bindings/webcore/streams/JSReadRequest.cpp:32:43: note: candidate function
   32 | static JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                           ^
unified/../../../src/jsc/bindings/webcore/streams/JSReadableStreamDefaultReader.cpp:41:52: note: candidate function
   41 | static WebCore::JSReadableStreamDefaultController* defaultControllerOf(JSReadableStream* stream)
      |                                                    ^
8 errors generated.
[82/130] cxx obj/unified/UnifiedSource-src_jsc_bindings_webcrypto-7.cpp.o
[84/130] cxx obj/unified/UnifiedSource-src_jsc_modules-0.cpp.o
[85/130] cxx obj/unified/UnifiedSource-src_jsc_bindings-6.cpp.o
[86/130] cxx obj/unified/UnifiedSource-src_jsc_bindings-20.cpp.o
[87/130] cxx obj/unified/UnifiedSource-src_jsc_bindings-13.cpp.o
[88/130] cxx obj/unified/UnifiedSource-src_jsc_bindings_webcrypto-8.cpp.o
[89/130] cxx obj/src/jsc/bindings/ZigGlobalObject.cpp.o
[90/130] cxx obj/src/jsc/bindings/BunProcess.cpp.o
[91/130] cxx obj/src/jsc/bindings/bindings.cpp.o
[92/130] cxx obj/codegen/ZigGeneratedClasses.cpp.o
ninja: build stopped: subcommand failed.
info: syncing channel updates for nightly-2026-05-06-x86_64-unknown-linux-gnu
info: latest update on 2026-05-06 for version 1.97.0-nightly (e95e73209 2026-05-05)
info: component rust-src is up to date
info: component rust-std is up to date
info: checking for self-update (current version: 1.29.0)
[1m[92m   Compiling[0m bun_core v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/bun_core)
[1m[92m   Compiling[0m bun_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/jsc)
[1m[92m   Compiling[0m bun_runtime v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/runtime)
[1m[92m   Compiling[0m bun_paths v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/paths)
[1m[92m   Compiling[0m bun_ptr v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/ptr)
[1m[92m   Compiling[0m bun_errno v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/errno)
[1m[92m   Compiling[0m bun_boringssl_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/boringssl_sys)
[1m[92m   Compiling[0m bun_safety v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/safety)
[1m[92m   Compiling[0m bun_zlib_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/zlib_sys)
[1m[92m   Compiling[0m bun_cares_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/cares_sys)
[1m[92m   Compiling[0m bun_zstd v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/zstd)
[1m[92m   Compiling[0m bun_picohttp v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/picohttp)
[1m[92m   Compiling[0m bun_output v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/output)
[1m[92m   Compiling[0m bun_clap v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/clap)
[1m[92m   Compiling[0m bun_valkey v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/valkey)
[1m[92m   Compiling[0m bun_platform v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/platform)
[1m[92m   Compiling[0m bun_collections v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/collections)
[1m[92m   Compiling[0m bun_tcc_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/tcc_sys)
[1m[92m   Compiling[0m bun_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sys)
[1m[92m   Compiling[0m bun_url v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/url)
[1m[92m   Compiling[0m bun_semver v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/semver)
[1m[92m   Compiling[0m bun_base64 v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/base64)
[1m[92m   Compiling[0m bun_shell_parser v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/shell_parser)
[1m[92m   Compiling[0m bun_http_types v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/http_types)
[1m[92m   Compiling[0m bun_perf v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/perf)
[1m[92m   Compiling[0m bun_analytics v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/analytics)
[1m[92m   Compiling[0m bun_threading v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/threading)
[1m[92m   Compiling[0m bun_which v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/which)
[1m[92m   Compiling[0m bun_libarchive v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/libarchive)
[1m[92m   Compiling[0m bun_boringssl v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/boringssl)
[1m[92m   Compiling[0m bun_glob v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/glob)
[1m[92m   Compiling[0m bun_md v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/md)
[1m[92m   Compiling[0m bun_dns v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/dns)
[1m[92m   Compiling[0m bun_ast v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/ast)
[1m[92m   Compiling[0m bun_sha_hmac v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sha_hmac)
[1m[92m   Compiling[0m bun_watcher v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/watcher)
[1m[92m   Compiling[0m bun_exe_format v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/exe_format)
[1m[92m   Compiling[0m bun_sql v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sql)
[1m[92m   Compiling[0m bun_csrf v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/csrf)
[1m[92m   Compiling[0m bun_spawn_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/spawn_sys)
[1m[92m   Compiling[0m bun_uws_sys v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/uws_sys)
[1m[92m   Compiling[0m bun_s3_signing v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/s3_signing)
[1m[92m   Compiling[0m bun_io v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/io)
[1m[92m   Compiling[0m bun_uws v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/uws)
[1m[92m   Compiling[0m bun_dotenv v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/dotenv)
[1m[92m   Compiling[0m bun_install_types v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/install_types)
[1m[92m   Compiling[0m bun_parsers v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/parsers)
[1m[92m   Compiling[0m bun_react_compiler v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/react_compiler)
[1m[92m   Compiling[0m bun_zlib v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/zlib)
[1m[92m   Compiling[0m bun_css v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/css)
[1m[92m   Compiling[0m bun_brotli v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/brotli)
[1m[92m   Compiling[0m bun_event_loop v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/event_loop)
[1m[92m   Compiling[0m bun_options_types v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/options_types)
[1m[92m   Compiling[0m bun_sourcemap v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sourcemap)
[1m[92m   Compiling[0m bun_http v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/http)
[1m[92m   Compiling[0m bun_crash_handler v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/crash_handler)
[1m[92m   Compiling[0m bun_resolve_builtins v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/resolve_builtins)
[1m[92m   Compiling[0m bun_api v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/api)
[1m[92m   Compiling[0m bun_js_printer v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/js_printer)
[1m[92m   Compiling[0m bun_spawn v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/spawn)
[1m[92m   Compiling[0m bun_patch v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/patch)
[1m[92m   Compiling[0m bun_js_parser v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/js_parser)
[1m[92m   Compiling[0m bun_resolver v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/resolver)
[1m[92m   Compiling[0m bun_ini v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/ini)
[1m[92m   Compiling[0m bun_router v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/router)
[1m[92m   Compiling[0m bun_bundler v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/bundler)
[1m[92m   Compiling[0m bun_standalone_graph v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/standalone_graph)
[1m[92m   Compiling[0m bun_transpiler v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/transpiler)
[1m[92m   Compiling[0m bun_bunfig v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/bunfig)
[1m[92m   Compiling[0m bun_install v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/install)
[1m[92m   Compiling[0m bun_js_parser_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/js_parser_jsc)
[1m[92m   Compiling[0m bun_ast_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/ast_jsc)
[1m[92m   Compiling[0m bun_css_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/css_jsc)
[1m[92m   Compiling[0m bun_http_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/http_jsc)
[1m[92m   Compiling[0m bun_patch_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/patch_jsc)
[1m[92m   Compiling[0m bun_sql_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sql_jsc)
[1m[92m   Compiling[0m bun_semver_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/semver_jsc)
[1m[92m   Compiling[0m bun_bundler_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/bundler_jsc)
[1m[92m   Compiling[0m bun_sys_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sys_jsc)
[1m[92m   Compiling[0m bun_sourcemap_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/sourcemap_jsc)
[1m[92m   Compiling[0m bun_install_jsc v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/install_jsc)
[1m[92m   Compiling[0m bun_bin v0.0.0 (/root/bun/.claude/worktrees/bridge-cse_01V63gchYpD4NmSJpEWfYGqT/src/bun_bin)
[1m[92m    Finished[0m `dev` profile [unoptimized + debuginfo] target(s) in 46.27s
error: script "bd" exited with code 1
